# coffee-onco-py

./: LICENSE  README.md  pyproject.toml
projects/001_tcga_brca_subtypes/: README.md  load_data.py
projects/001_tcga_brca_subtypes/data/: BRCA.547.PAM50.SigClust.Subtypes.txt  clinical_data.tsv  file_manifest.tsv
projects/001_tcga_brca_subtypes/notebooks/: 01_load_tcga_data.ipynb  02_pam50_visualization.ipynb
projects/001_tcga_brca_subtypes/notebooks/.ipynb_checkpoints/: 01_load_tcga_data-checkpoint.ipynb  02_pam50_visualization-checkpoint.ipynb
projects/001_tcga_brca_subtypes/src/: __init__.py  data_loader.py
